# layr-sdk

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: basic_usage.py  crewai_example.py  langchain_example.py  local_development.py  multi_agent.py  otel_export.py
layr/: __init__.py  agent.py  anomaly.py  event.py  exceptions.py  schema.py  session.py  utils.py
layr/exporters/: __init__.py  base.py  datadog.py  grafana.py  layr_cloud.py  local.py  otlp.py
layr/integrations/: __init__.py  autogen.py  crewai.py  langchain.py
layr_sdk.egg-info/: SOURCES.txt  requires.txt
tests/: test_agent.py  test_anomaly.py  test_event.py  test_exporters.py  test_integrations.py  test_policy.py  test_schema.py  test_utils.py
